Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,18 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point robability for exactly 3 minutes: 11.8092%\n",
-      "Cumulative probability of 3 minutes or less: 52.7633%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -104,7 +95,7 @@
     "    decay_rate = 1 / 4\n",
     "    return 1 - np.exp(-decay_rate * x)\n",
     "    \n",
-    "print(\"Point robability for exactly 3 minutes: {:.4f}%\".format(exp_pdf(4, 3) * 100))\n",
+    "print(\"Point probability for exactly 3 minutes: {:.4f}%\".format(exp_pdf(4, 3) * 100))\n",
     "print(\"Cumulative probability of 3 minutes or less: {:.4f}%\".format(exp_cdf(4, 3) * 100))"
    ]
   },
